Updated Login & Font

--- a/templates/authentication/base.html
+++ b/templates/authentication/base.html
@@ -17,8 +17,10 @@
     <!-- Custom Style Sheets -->
     <link rel="stylesheet" href="{% static 'authentication/css/login-style.css' %}">
 
-    <!-- Success Page Icon -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
+    <!-- LOgin Page Icons CDN -->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://unicons.iconscout.com/release/v2.1.9/css/unicons.css'>
+
 </head>
 
 
