--- a/static/todo/css/index-style.css
+++ b/static/todo/css/index-style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
+
 body {
     min-height: 100vh;
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 /* DataTable's Card */
