--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -2,110 +2,132 @@
 {% block title %}Login Page{% endblock %}
 {% block login %}
 <div class="login-body">
-  <div class="login-container" id="container">
-    <div class="form-container sign-up-container">
-      <form action="{% url 'signup' %}" method="POST" class="login-form needs-validation" id="registration-form"
-        enctype="multipart/form-data" novalidate>
-        {% csrf_token %}
-        <h1>CREATE ACCOUNT</h1>
-        <!--  -->
-        <div class="col-12">
-          <input class="form-control mt-3 mb-3" type="text" placeholder="Name" name="username" id="username" required />
-        </div>
-        <!--  -->
-        <div class="col-12">
-          <input class="form-control mb-3" type="email" placeholder="Email" name="email" id="email" required />
-        </div>
-        <!--  -->
-        <div class="col-12">
-          <input class="form-control mb-3" type="password" placeholder="Password" name="password" id="password"
-            required />
-        </div>
-        <!--  -->
-        <div class="col-12">
-          <input class="form-control mb-3" type="password" placeholder="Re-Enter Password" name="password1"
-            id="password1" required />
-        </div>
-        <button type="submit" class="login-button">Sign Up</button>
-      </form>
+    <div class="section">
+        <div class="container">
+            <div class="row full-height justify-content-center">
+                <div class="col-12 text-center align-self-center py-5">
+                    <div class="section pb-5 pt-5 pt-sm-2 text-center">
+                        <h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
+                        <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
+                        <label for="reg-log"></label>
+                        <div class="card-3d-wrap mx-auto">
+                            <div class="card-3d-wrapper">
+                                <div class="card-front">
+                                    <div class="center-wrap">
+                                        <div class="section text-center">
+                                            <h4 class="mb-4 pb-3">Log In</h4>
 
+                                            <form action="{% url 'login' %}" method="POST"
+                                                class="login-form" id="login-form">
+                                                {% csrf_token %}
+                                                <div class="form-group">
+                                                    <input type="text" name="username" class="form-style"
+                                                        placeholder="Username" id="username" required>
+                                                    <i class="input-icon uil uil-at"></i>
+                                                </div>
+                                                <div class="form-group mt-2">
+                                                    <input type="password" name="password" class="form-style"
+                                                        placeholder="Password" id="password" required>
+                                                    <i class="input-icon uil uil-lock-alt"></i>
+                                                </div>
+                                                <p class="mb-0 mt-4 text-center"><a href="{% url 'reset-password' %}"
+                                                        class="link">Forgot your
+                                                        password?</a></p>
+                                                <button type="submit" class="btn btn-primary mt-3 login-button">Sign
+                                                    In</button>
+                                        </div>
+                                        </form>
+                                    </div>
+                                </div>
+                                <div class="card-back">
+                                    <div class="center-wrap">
+                                        <div class="section text-center">
+                                            <h4 class="mb-4 pb-3">Sign Up</h4>
+
+                                            <form action="{% url 'signup' %}" method="POST"
+                                                class="login-form needs-validation" id="registration-form"
+                                                enctype="multipart/form-data">
+                                                {% csrf_token %}
+                                                <div class="form-group">
+                                                    <input type="text" name="username" class="form-style"
+                                                        placeholder="Username" id="username" required>
+                                                    <i class="input-icon uil uil-user"></i>
+                                                </div>
+                                                <div class="form-group mt-2">
+                                                    <input type="email" name="email" class="form-style"
+                                                        placeholder="Email" id="email" required>
+                                                    <i class="input-icon uil uil-at"></i>
+                                                </div>
+                                                <div class="form-group mt-2">
+                                                    <input type="password" name="password" class="form-style"
+                                                        placeholder="Your Password" id="password" required>
+                                                    <i class="input-icon uil uil-lock-alt"></i>
+                                                </div>
+                                                <div class="form-group mt-2">
+                                                    <input type="password" name="password1" class="form-style"
+                                                        placeholder="Re-Enter Password" id="password1"
+                                                        required>
+                                                    <i class="input-icon uil uil-lock-alt"></i>
+                                                </div>
+                                                <button type="submit" class=" btn btn-primary mt-2 login-button">Sign Up</button>
+
+                                        </div>
+                                        </form>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="form-container sign-in-container">
-      <form action="{% url 'login' %}" method="POST" class="login-form needs-validation" id="login-form" novalidate>
-        {% csrf_token %}
-        <h1>SIGN IN</h1>
-        <div class="col-12">
-          <input class="form-control mt-3 mb-3" type="text" placeholder="Username" name="username" required />
-        </div>
-        <div class="col-12">
-          <input class="form-control" type="password" placeholder="Password" name="password" required />
-        </div>
-        <a href="{% url 'reset-password' %}" class="reset-button">Forgot your password?</a>
-        <button type="submit" class="login-button">Sign In</button>
-      </form>
-    </div>
-    <div class="overlay-container">
-      <div class="overlay">
-        <div class="overlay-panel overlay-left">
-          <h1>Welcome Back!</h1>
-          <p>To keep connected with us please login with your personal info</p>
-          <button class="login-button ghost" id="signIn">Sign In</button>
-        </div>
-        <div class="overlay-panel overlay-right">
-          <h1>Hello, Friend!</h1>
-          <p>Enter your personal details and start the journey with us</p>
-          <button class="login-button ghost" id="signUp">Sign Up</button>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
-
-
 {% endblock login %}
 {% block script %}
 <script>
-  // Enable Bootstrap form validation
-  (function () {
-    'use strict';
+    // Enable Bootstrap form validation
+    (function () {
+        'use strict';
 
-    var forms = document.querySelectorAll('.needs-validation');
+        var forms = document.querySelectorAll('.needs-validation');
 
-    Array.from(forms).forEach(function (form) {
-      form.addEventListener('submit', function (event) {
-        if (!form.checkValidity()) {
-          event.preventDefault();
-          event.stopPropagation();
-        }
+        Array.from(forms).forEach(function (form) {
+            form.addEventListener('submit', function (event) {
+                if (!form.checkValidity()) {
+                    event.preventDefault();
+                    event.stopPropagation();
+                }
 
-        form.classList.add('was-validated');
-      }, false);
+                form.classList.add('was-validated');
+            }, false);
+        });
+    })();
+    function handleMessages() {
+        {% if messages %}
+        {% for message in messages %}
+        {% if message.tags == 'success' %}
+        Swal.fire({
+            icon: 'success',
+            title: 'Success',
+            text: "{{ message|safe }}",
+        });
+        {% elif message.tags == 'error' %}
+        Swal.fire({
+            icon: 'error',
+            title: 'Error',
+            text: "{{ message|safe }}",
+        });
+        {% endif %}
+        {% endfor %}
+        {% endif %}
+    }
+
+    // Call the function to handle messages when the document is ready
+    document.addEventListener("DOMContentLoaded", function () {
+        handleMessages();
     });
-  })();
-  function handleMessages() {
-    {% if messages %}
-    {% for message in messages %}
-    {% if message.tags == 'success' %}
-    Swal.fire({
-      icon: 'success',
-      title: 'Success',
-      text: "{{ message|safe }}",
-    });
-    {% elif message.tags == 'error' %}
-    Swal.fire({
-      icon: 'error',
-      title: 'Error',
-      text: "{{ message|safe }}",
-    });
-    {% endif %}
-    {% endfor %}
-    {% endif %}
-  }
-
-  // Call the function to handle messages when the document is ready
-  document.addEventListener("DOMContentLoaded", function () {
-    handleMessages();
-  });
 
 </script>
 
