--- a/templates/authentication/reset-password.html
+++ b/templates/authentication/reset-password.html
@@ -1,53 +1,44 @@
 {% extends 'authentication/base.html' %}
 {% block title %}Password Reset Page{% endblock %}
 {% block reset-password %}
-<div class="container-fluid bg-dark p-5" style="height: 100vh;">
-    <div class="card bg-blur border border-white text-white mt-2"
-        style="backdrop-filter: blur(10px) !important; background: border-box; ">
-        <h5 class="text-center text-white mb-3 p-3 bg-blur border-bottom">FLIGHT BOOKINGS</h5>
-        <div class="container mb-5 px-5">
-            <div class="card bg-blur border border-white text-center text-white mt-2 mb-4"
-                style="backdrop-filter: blur(10px) !important; background: border-box;">
-                <h5 class="text-center mt-3">RESET YOUR PASSWORD</h5>
-                <hr>
-                <div class="card-body shadow">
-                    <form method="POST"
-                        class="reset-password-form needs-validation" novalidate>
-                        {% csrf_token %}
-                        <div class="col-12">
-                            <input class="form-control mb-3" type="password" placeholder="Password" name="password"
-                                id="password" required />
+<div class="login-body">
+    <div class="section">
+        <div class="container">
+            <div class="row full-height justify-content-center">
+                <div class="col-12 text-center align-self-center py-5">
+                    <div class="section pb-5 pt-5 pt-sm-2 text-center">
+                        <div class="card-3d-wrap mx-auto">
+                            <div class="card-3d-wrapper">
+                                <div class="card-front">
+                                    <div class="center-wrap">
+                                        <div class="section text-center">
+                                            <h3 class="mb-4 pb-3">RESET PASSWORD</h3>
+                                            <h5 class="mb-3">Enter New Password : </h5>
+                                            <form method="POST" class="login-form needs-validation" id="login-form">
+                                                {% csrf_token %}
+                                                <div class="form-group mt-2">
+                                                    <input type="password" name="password" class="form-style" placeholder="Password" id="password" required>
+                                                    <i class="input-icon uil uil-lock-alt"></i>
+                                                </div>
+                                                <div class="form-group mt-2">
+                                                    <input type="password" name="password1" class="form-style" placeholder="Re-Enter Password" id="password1" required>
+                                                    <i class="input-icon uil uil-lock-alt"></i>
+                                                </div>
+                                                <button type="submit" class="btn btn-primary mt-3 login-button">Confirm Password</button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <!--  -->
-                        <div class="col-12">
-                            <input class="form-control mb-3" type="password" placeholder="Re-Enter Password" name="password1" id="password1" required />
-                        </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn btn-primary">RESET PASSWORD</button>
-                        </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+</div>
 <script>
-    (function () {
-        'use strict';
-
-        var forms = document.querySelectorAll('.needs-validation');
-
-        Array.from(forms).forEach(function (form) {
-            form.addEventListener('submit', function (event) {
-                if (!form.checkValidity()) {
-                    event.preventDefault();
-                    event.stopPropagation();
-                }
-
-                form.classList.add('was-validated');
-            }, false);
-        });
-    })();
     function handleMessages() {
         {% if messages %}
         {% for message in messages %}
